--- a/style_noviZadatak.css
+++ b/style_noviZadatak.css
@@ -14,8 +14,8 @@ body{
 form{
     min-height: 20vh;
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    justify-content: space-between; 
+    flex-wrap: wrap; 
     align-items: center;
 }
 
@@ -51,8 +51,8 @@ header h1{
 .todo-input{
     /* height: 100px; */
     padding: 20px 10px;
-    line-height: 50px;
-    width: 90%;
+    line-height: 70px;
+    width: 100%;
 }
 
 
@@ -98,18 +98,30 @@ header h1{
     width: 30%;
 }
 
+#kategorijaSelect{
+    margin-left: 40px;
+}
+
 .kategorija{
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
 }
 
 .kategorija input{
-    margin-left: 20px;
-    margin-top: 10px;
+    margin-left: 55px;
 }
 
+/* select{
+    position: absolute;
+    margin-top: -100px;
+} */
 
+
+#kategorijalabel{
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
