--- a/style_pocetna.css
+++ b/style_pocetna.css
@@ -64,24 +64,32 @@ progress::-moz-progress-bar {
     border-radius: 15px;
 
 }
+#pocetna, #dodajNovi, #danas{
+  display:flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 15px;
+  
+}
+
 
 footer{
-    position: absolute;
-    bottom: 0;
-    background-color: rgb(190, 190, 190);
-    height: 100px;
-    width: 100%;
+  position: absolute;
+  bottom: 0;
+  background-color: rgb(190, 190, 190);
+  height: 100px;
+  width: 100%;
+  color: black;
 }
 
 footer div{
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 footer a{
-    text-decoration: none;
-    color: black;
-    font-size: 15px;
+  text-decoration: none;
+  font-size: 15px;
 }
 
 
