--- a/kalendar/style_kalendar.css
+++ b/kalendar/style_kalendar.css
@@ -33,7 +33,6 @@ header {
 
 header #todaysDate{
     margin-left: 15px;
-    padding: 5px;
 }
 
 #navIcons{
@@ -74,33 +73,33 @@ header #todaysDate{
     align-items: center;
     transition: all 0.5s ease;
     width: 300px;
+    border-radius: 15px;
 }
 
 .todo li{
     /*this moves the icons to the right side(eliminates the space between them)*/
     flex: 1;  
-    margin-left: 40px;
+    margin-left: 10px;
     margin-top: 4px;
-    height: 39px;
 }
 
 .todo .todo-title{
     position: absolute;
-    margin-top: -25px;
+    margin-top: -30px;
     margin-left: 10px;
     font-size: 10px;
 }
 
 .todo .todo-date{
     position: absolute;
-    margin-left: 220px;
-    margin-top: 25px;
+    margin-left: 140px;
+    margin-top: 35px;
     font-size: 10px;
 }
 
 .todo .todo-categ{
     position: absolute;
-    margin-top: 25px;
+    margin-top: 35px;
     margin-left: 10px;
     font-size: 10px;
 }
@@ -112,6 +111,7 @@ header #todaysDate{
     border: none;
     cursor: pointer;
     font-size: 1rem;
+    border-radius: 15px;
 }
 
 .complete-btn{
@@ -119,7 +119,7 @@ header #todaysDate{
 }
 
 .todo-item{
-    padding: 0.5rem 0.5rem;
+    padding: 0rem 0.5rem;
 }
 
 .fa-trash,
@@ -189,11 +189,15 @@ footer a{
     text-decoration: none;
     font-size: 15px;
 }
-#pocetna{
+#pocetna, #dodajNovi, #danas{
+    display:flex;
     flex-direction: column;
+    text-align: center;
+    margin-top: 15px;
+    
 }
-.fa-home, .fa-plus-square, .fa-tasks{
-    font-size: 30px;
+/* #pocetna{
+    flex-direction: column;
 }
 .fa-home{
     padding: 5px 25px 0 25px;
@@ -206,24 +210,21 @@ footer a{
 }
 #dodajnovi, #danas{
     flex-direction: column;
-}
+} */
 #pocetna:hover, #dodajnovi:hover, #danas:hover, #icon-settings:hover, #icon-notes:hover, #icon-calendar:hover{
     cursor: pointer;
 }
 
-.fa-calendar-alt,.fa-sticky-note,.fa-sliders-h{
-    font-size: 20px;
-    padding: 5px;
-    border: solid 1px white;
-    border-radius: 10px;
+.fa-cog, .fa-sticky-note, .fa-calendar{
+    padding: 0 5px 0 5px;
+    font-size: 21px;
+    margin-top: 2px;
 }
-
 
 /* from W3school */
 
 * {box-sizing: border-box;}
 ul {list-style-type: none;}
-body {font-family: Verdana, sans-serif;}
 
 .month {
   padding: 70px 25px;
