--- a/style_danas.css
+++ b/style_danas.css
@@ -5,7 +5,9 @@
 }
 
 body{
-    background: rgb(81, 55, 82);
+    /* background: rgb(81, 55, 82); */
+    background: rgb(39,3,51);
+    background: linear-gradient(180deg, rgba(39,3,51,1) 21%, rgba(133,39,215,1) 100%); 
     color: white;
     font-family: "Poppins", "sans-serif";
     min-height: 100vh;
@@ -42,7 +44,8 @@ header #todaysDate{
 
 #overHeaderPanel{
     height: 30px;
-    background-color: rgb(190, 190, 190);
+    background: rgb(76,68,79);
+    background: linear-gradient(183deg, rgba(76,68,79,1) 0%, rgba(201,201,201,1) 100%); 
 }
 
 .fa-cog, .fa-sticky-note, .fa-calendar{
@@ -194,7 +197,8 @@ select{
 footer{
     position: absolute;
     bottom: 0;
-    background-color: rgb(190, 190, 190);
+    background: rgb(76,68,79);
+    background: linear-gradient(0deg, rgba(76,68,79,1) 0%, rgba(201,201,201,1) 100%); 
     height: 100px;
     width: 100%;
     color: black;
@@ -208,4 +212,15 @@ footer div{
 footer a{
     text-decoration: none;
     font-size: 15px;
+}
+
+.dayBtn{
+    background: rgb(92, 2, 92);
+    border: none;
+    color: white;
+    padding: 5px;
+}
+
+.dayBtn :hover{
+    background: rgb(185, 4, 185);
 }
