--- a/style_pocetna.css
+++ b/style_pocetna.css
@@ -6,7 +6,8 @@
 }
 
 body{
-    background-color: rgb(81, 55, 82);
+  background: rgb(39,3,51);
+  background: linear-gradient(180deg, rgba(39,3,51,1) 21%, rgba(133,39,215,1) 100%); 
     color: rgb(255, 255, 255);
     min-height: 100vh;
 }
@@ -14,7 +15,6 @@ body{
 .wrapper{
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
     max-width: 330px;
 }
 
@@ -76,7 +76,8 @@ progress::-moz-progress-bar {
 footer{
   position: absolute;
   bottom: 0;
-  background-color: rgb(190, 190, 190);
+  background: rgb(76,68,79);
+  background: linear-gradient(0deg, rgba(76,68,79,1) 0%, rgba(201,201,201,1) 100%); 
   height: 100px;
   width: 100%;
   color: black;
