--- a/kalendar/style_kalendar.css
+++ b/kalendar/style_kalendar.css
@@ -5,10 +5,11 @@
 }
 
 body{
-    background: rgb(81, 55, 82);
+    background: linear-gradient(180deg, rgba(39,3,51,1) 21%, rgba(133,39,215,1) 100%); 
     color: white;
     font-family: "Poppins", "sans-serif";
     min-height: 100vh;
+    position: relative;
 }
 
 .wrapper{
@@ -56,6 +57,8 @@ header #todaysDate{
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: scroll;
+    position: relative;
 }
 
 .todo-list{
@@ -259,6 +262,7 @@ ul {list-style-type: none;}
   margin: 0;
   padding: 10px 0;
   background-color: rgb(54, 40, 61);
+  background: linear-gradient(320deg, rgba(39,3,51,1) 21%, rgba(133,39,215,1) 100%); 
 }
 
 .weekdays li {
@@ -268,13 +272,13 @@ ul {list-style-type: none;}
   text-align: center;
 }
 
-.days {
+.days{
   padding: 10px 0;
   background: rgb(156, 156, 156);
   margin: 0;
 }
 
-.days li {
+.days li{
   list-style-type: none;
   display: inline-block;
   width: 13.6%;
