--- a/zabiljeske/style_zabiljeske.css
+++ b/zabiljeske/style_zabiljeske.css
@@ -5,10 +5,11 @@
 }
 
 body{
-    background: rgb(81, 55, 82);
+    background: linear-gradient(180deg, rgba(39,3,51,1) 21%, rgba(133,39,215,1) 100%); 
     color: white;
     font-family: "Poppins", "sans-serif";
     min-height: 100vh;
+    position: relative;
 }
 
 form{
@@ -83,6 +84,17 @@ footer a{
 }
 .trash-btn{
     background: #c94062 ;
+    color: white;
+    padding: 1rem;
+    border: none;
+    border-radius: 16px;
+    cursor: pointer;
+    font-size: 1rem;
+    float: right;
+    margin-top: -48px;
+}
+.edit-btn{
+    background: #3fc2ff ;
     color: white;
     padding: 1rem;
     border: none;
