--- a/kalendar/style_kalendar.css
+++ b/kalendar/style_kalendar.css
@@ -178,7 +178,8 @@ select{
 footer{
     position: absolute;
     bottom: 0;
-    background-color: rgb(190, 190, 190);
+    background: rgb(76,68,79);
+    background: linear-gradient(0deg, rgba(76,68,79,1) 0%, rgba(201,201,201,1) 100%); 
     height: 70px;
     width: 100%;
     color: black;
@@ -309,4 +310,8 @@ ul {list-style-type: none;}
 
 @media screen and (max-width: 290px) {
   .weekdays li, .days li {width: 12.2%;}
+}
+
+#icon-calendar{
+    color: grey;
 }
