--- a/postavke/style_postavke.css
+++ b/postavke/style_postavke.css
@@ -29,7 +29,8 @@ header {
 footer{
     position: absolute;
     bottom: 0;
-    background-color: rgb(190, 190, 190);
+    background: rgb(76,68,79);
+    background: linear-gradient(0deg, rgba(76,68,79,1) 0%, rgba(201,201,201,1) 100%); 
     height: 70px;
     width: 100%;
     color: black;
@@ -37,6 +38,10 @@ footer{
 footer div{
     display: flex;
     justify-content: space-around;
+}
+
+.wrapperHeader{
+    /* width: ; */
 }
 
 footer a{
@@ -48,8 +53,10 @@ footer a{
 }
 #headPostavke{
     margin: 40px;
+    margin-left: 125px;
     padding: 20px;
     font-size: large;
+    font-weight: bolder;
 }
 #postavke{
     
