--- a/zabiljeske/style_zabiljeske.css
+++ b/zabiljeske/style_zabiljeske.css
@@ -8,7 +8,7 @@ body{
     background: linear-gradient(180deg, rgba(39,3,51,1) 21%, rgba(133,39,215,1) 100%); 
     color: white;
     font-family: "Poppins", "sans-serif";
-    min-height: 100vh;
+    min-height: 95vh;
     position: relative;
 }
 
@@ -52,7 +52,8 @@ header h1{
 footer{
     position: absolute;
     bottom: 0;
-    background-color: rgb(190, 190, 190);
+    background: rgb(76,68,79);
+    background: linear-gradient(0deg, rgba(76,68,79,1) 0%, rgba(201,201,201,1) 100%); 
     height: 70px;
     width: 100%;
     color: black;
